Set up default.html and jekyll tags

--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Juan Emilio Miralles, Scienist</title>
-    <!-- link to main stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
-  <body>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/cv">CV</a></li>
-            <li><a href="/blog">Blog</a></li>
-        </ul>
-    </nav>
-    <div class="container">
-        <div class="blurb">
-            <h1>This is the invaluable website of Juan Emilio Miralles</h1>
-        <p>He is best known for his <em>Touch of Evil</em>. <a href="/about">The night is long and windy...</a></p>
-        </div><!-- /.blurb -->
-    </div><!-- /.container -->
-    <footer>
-        <ul>
-            <li><a href="mailto:juanemiliomiralles@the_road_to_hades.com">email</a></li>
-            <li><a href="https://github.com/je-miralles">github.com/je-miralles</a></li>
-      </ul>
-    </footer>
-  </body>
-</html>
+---
+layout: default
+title: 
+---
+<div class="blurb">
+  <h1>Juan Emilio Miralles</h1>
+  <p>Physicist, engineer</p>
+</div><!-- /.blurb -->
