--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title:
 ---
 <div class="blurb">
   <h1>Juan Emilio Miralles</h1>
-  <p>Physicist, engineer</p>
+  <p>SoC Engineering, Software Development, Physics</p>
 </div><!-- /.blurb -->
