Use habitual name

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: 
 ---
 <div class="blurb">
-  <h1>Juan Emilio Miralles</h1>
+  <h1>Emilio Miralles</h1>
   <p>SoC Engineering, Software Development, Physics</p>
 </div><!-- /.blurb -->
